// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema
generator dbml {
  provider = "prisma-dbml-generator"
}

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id                   Int                   @id @default(autoincrement())
  name                 String
  cpf                  String                @unique
  email                String                @unique
  emailConfirmed       Boolean               @default(false)
  password             String
  SessionId            Int?
  Sessions             Session?
  UserConfirmationCode UserConfirmationCode?
  CulturalAgent        CulturalAgentPF?
  Contact              Contact[]
  CulturalCollective   CulturalCollective[]
  CulturalAgentPJ      CulturalAgentPJ?
  Classification       Classification[]
  createdAt            DateTime              @default(now())
  updatedAt            DateTime              @updatedAt
}

model Session {
  id        Int      @id @default(autoincrement())
  userId    Int      @unique
  token     String
  User      User     @relation(fields: [userId], references: [id])
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model UserConfirmationCode {
  id        Int      @id @default(autoincrement())
  userId    Int      @unique
  User      User     @relation(fields: [userId], references: [id])
  code      String
  used      Boolean? @default(false)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model CulturalAgentPF {
  id             Int           @id @default(autoincrement())
  alternativeTel String
  cep            String
  complement     String
  county         String
  cpf            String
  programs       String[]
  email          String
  houseNumber    String
  name           String
  neighboorhood  String
  phone          String
  proponent      String
  public         Boolean
  publicPlace    String
  tel            String
  uf             String
  fileId         String        @unique
  userId         Int           @unique
  NoticeFiles    NoticeFiles[]
  Notice         Notice[]
  File           FilePF?       @relation(fields: [fileId], references: [id])
  User           User          @relation(fields: [userId], references: [id])
  createdAt      DateTime      @default(now())
  updatedAt      DateTime      @updatedAt
}

model FilePF {
  id                String           @id @default(cuid())
  name              String
  key               String
  contentType       String
  culturalAgentPFId Int?
  CulturalAgentPF   CulturalAgentPF?
  createdAt         DateTime         @default(now())
}

model CulturalAgentPJ {
  id             Int           @id @default(autoincrement())
  alternativeTel String
  cep            String
  cnpj           String
  complement     String
  county         String
  email          String
  fantasyName    String
  houseNumber    String
  job            String
  neighboorhood  String
  phone          String
  proponent      String
  public         Boolean
  publicPlace    String
  responsible    String
  socialReason   String
  tel            String
  uf             String
  website        String
  programs       String[]
  Notice         Notice[]
  NoticeFiles    NoticeFiles[]
  fileId         String        @unique
  userId         Int           @unique
  User           User          @relation(fields: [userId], references: [id])
  File           FilePJ?       @relation(fields: [fileId], references: [id])
  createdAt      DateTime      @default(now())
  updatedAt      DateTime      @updatedAt
}

model FilePJ {
  id                String           @id @default(cuid())
  name              String
  key               String
  contentType       String
  culturalAgentPJId Int?
  CulturalAgentPJ   CulturalAgentPJ?
  createdAt         DateTime         @default(now())
}

model Contact {
  id        Int      @id @default(autoincrement())
  type      String
  number    String
  public    Boolean
  userId    Int
  User      User     @relation(fields: [userId], references: [id])
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model CulturalCollective {
  id            Int      @id @default(autoincrement())
  name          String
  area          String
  opening       String
  phone         String
  email         String
  address       String
  neighboorhood String
  cep           String
  county        String
  responsible   String
  complement    String?
  userId        Int
  User          User     @relation(fields: [userId], references: [id])
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt
}

model NoticePreview {
  id           Int      @id @default(autoincrement())
  name         String
  observations String
  city         String
  openingDate  DateTime
  endDate      DateTime
  Notice       Notice[]
  uploads      String[] @default(["RG, CPF, Comprovante de residência"])
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt
}

model Notice {
  id                    Int                @id @default(autoincrement())
  name                  String             @default("name")
  description           String             @default("description")
  justification         String             @default("justification")
  executionPlace        String             @default("executionPlace")
  publicServed          String             @default("publicServed")
  accessDemocratization String             @default("accessDemocratization")
  accessibility         String             @default("acessibilidade")
  noticePreviewId       Int
  responsibleId         Int
  projectCoordinatorId  Int
  culturalAgentPFId     Int?
  culturalAgentPJId     Int?
  CulturalAgentPF       CulturalAgentPF?   @relation(fields: [culturalAgentPFId], references: [id])
  CulturalAgentPJ       CulturalAgentPJ?   @relation(fields: [culturalAgentPJId], references: [id])
  NoticePreview         NoticePreview      @relation(fields: [noticePreviewId], references: [id])
  Responsible           Responsible        @relation(fields: [responsibleId], references: [id])
  ProjectCoordinator    ProjectCoordinator @relation(fields: [projectCoordinatorId], references: [id])
  noticeFiles           NoticeFiles[]
  createdAt             DateTime           @default(now())
  updatedAt             DateTime           @updatedAt
}

model Responsible {
  id                     Int      @id @default(autoincrement())
  name                   String
  cpf                    String
  rg                     String
  issuingBody            String
  email                  String
  tel                    String
  cep                    String
  address                String
  number                 String
  complement             String
  neighboorHood          String
  county                 String
  uf                     String
  activiesOnLastTwoYears String
  Notice                 Notice[]
  createdAt              DateTime @default(now())
  updatedAt              DateTime @updatedAt
}

model ProjectCoordinator {
  id                     Int      @id @default(autoincrement())
  name                   String
  cpf                    String
  rg                     String
  issuingBody            String
  email                  String
  tel                    String
  cep                    String
  address                String
  number                 String
  complement             String
  neighboorHood          String
  county                 String
  uf                     String
  activiesOnLastTwoYears String
  Notice                 Notice[]
  createdAt              DateTime @default(now())
  updatedAt              DateTime @updatedAt
}

model NoticeFiles {
  id                Int              @id @default(autoincrement())
  name              String
  key               String
  contentType       String
  culturalAgentPFId Int?
  culturalAgentPJId Int?
  noticeId          Int?
  CulturalAgentPF   CulturalAgentPF? @relation(fields: [culturalAgentPFId], references: [id])
  CulturalAgentPJ   CulturalAgentPJ? @relation(fields: [culturalAgentPJId], references: [id])
  Notice            Notice?          @relation(fields: [noticeId], references: [id])
  createdAt         DateTime         @default(now())
}

model Classification {
  id                  Int                   @id @default(autoincrement())
  userId              Int
  noticeNumber        String
  projectNumber       String
  category            String
  proponentName       String
  cpf                 String
  situation           String
  User                User                  @relation(fields: [userId], references: [id])
  createdAt           DateTime              @default(now())
  updatedAt           DateTime              @updatedAt
  ClassificationFiles ClassificationFiles[]
}

model ClassificationFiles {
  id               Int            @id @default(autoincrement())
  name             String
  key              String
  contentType      String
  classificationId Int
  Classification   Classification @relation(fields: [classificationId], references: [id])
}
