//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  name String [not null]
  cpf String [unique, not null]
  email String [unique, not null]
  emailConfirmed Boolean [not null, default: false]
  password String [not null]
  SessionId Int
  Sessions Session
  UserConfirmationCode UserConfirmationCode
  CulturalAgent CulturalAgentPF
  Contact Contact [not null]
  CulturalCollective CulturalCollective [not null]
  CulturalAgentPJ CulturalAgentPJ
  Classification Classification [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Session {
  id Int [pk, increment]
  userId Int [unique, not null]
  token String [not null]
  User User [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table UserConfirmationCode {
  id Int [pk, increment]
  userId Int [unique, not null]
  User User [not null]
  code String [not null]
  used Boolean [default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table CulturalAgentPF {
  id Int [pk, increment]
  alternativeTel String [not null]
  cep String [not null]
  complement String [not null]
  county String [not null]
  cpf String [not null]
  programs String[] [not null]
  email String [not null]
  houseNumber String [not null]
  name String [not null]
  neighboorhood String [not null]
  phone String [not null]
  proponent String [not null]
  public Boolean [not null]
  publicPlace String [not null]
  tel String [not null]
  uf String [not null]
  fileId String [unique, not null]
  userId Int [unique, not null]
  NoticeFiles NoticeFiles [not null]
  Notice Notice [not null]
  File FilePF
  User User [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table FilePF {
  id String [pk]
  name String [not null]
  key String [not null]
  contentType String [not null]
  culturalAgentPFId Int
  CulturalAgentPF CulturalAgentPF
  createdAt DateTime [default: `now()`, not null]
}

Table CulturalAgentPJ {
  id Int [pk, increment]
  alternativeTel String [not null]
  cep String [not null]
  cnpj String [not null]
  complement String [not null]
  county String [not null]
  email String [not null]
  fantasyName String [not null]
  houseNumber String [not null]
  job String [not null]
  neighboorhood String [not null]
  phone String [not null]
  proponent String [not null]
  public Boolean [not null]
  publicPlace String [not null]
  responsible String [not null]
  socialReason String [not null]
  tel String [not null]
  uf String [not null]
  website String [not null]
  programs String[] [not null]
  Notice Notice [not null]
  NoticeFiles NoticeFiles [not null]
  fileId String [unique, not null]
  userId Int [unique, not null]
  User User [not null]
  File FilePJ
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table FilePJ {
  id String [pk]
  name String [not null]
  key String [not null]
  contentType String [not null]
  culturalAgentPJId Int
  CulturalAgentPJ CulturalAgentPJ
  createdAt DateTime [default: `now()`, not null]
}

Table Contact {
  id Int [pk, increment]
  type String [not null]
  number String [not null]
  public Boolean [not null]
  userId Int [not null]
  User User [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table CulturalCollective {
  id Int [pk, increment]
  name String [not null]
  area String [not null]
  opening String [not null]
  phone String [not null]
  email String [not null]
  address String [not null]
  neighboorhood String [not null]
  cep String [not null]
  county String [not null]
  responsible String [not null]
  complement String
  userId Int [not null]
  User User [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table NoticePreview {
  id Int [pk, increment]
  name String [not null]
  observations String [not null]
  city String [not null]
  openingDate DateTime [not null]
  endDate DateTime [not null]
  Notice Notice [not null]
  uploads String[] [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Notice {
  id Int [pk, increment]
  name String [not null, default: 'name']
  description String [not null, default: 'description']
  justification String [not null, default: 'justification']
  executionPlace String [not null, default: 'executionPlace']
  publicServed String [not null, default: 'publicServed']
  accessDemocratization String [not null, default: 'accessDemocratization']
  accessibility String [not null, default: 'acessibilidade']
  noticePreviewId Int [not null]
  responsibleId Int [not null]
  projectCoordinatorId Int [not null]
  culturalAgentPFId Int
  culturalAgentPJId Int
  CulturalAgentPF CulturalAgentPF
  CulturalAgentPJ CulturalAgentPJ
  NoticePreview NoticePreview [not null]
  Responsible Responsible [not null]
  ProjectCoordinator ProjectCoordinator [not null]
  noticeFiles NoticeFiles [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Responsible {
  id Int [pk, increment]
  name String [not null]
  cpf String [not null]
  rg String [not null]
  issuingBody String [not null]
  email String [not null]
  tel String [not null]
  cep String [not null]
  address String [not null]
  number String [not null]
  complement String [not null]
  neighboorHood String [not null]
  county String [not null]
  uf String [not null]
  activiesOnLastTwoYears String [not null]
  Notice Notice [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table ProjectCoordinator {
  id Int [pk, increment]
  name String [not null]
  cpf String [not null]
  rg String [not null]
  issuingBody String [not null]
  email String [not null]
  tel String [not null]
  cep String [not null]
  address String [not null]
  number String [not null]
  complement String [not null]
  neighboorHood String [not null]
  county String [not null]
  uf String [not null]
  activiesOnLastTwoYears String [not null]
  Notice Notice [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table NoticeFiles {
  id Int [pk, increment]
  name String [not null]
  key String [not null]
  contentType String [not null]
  culturalAgentPFId Int
  culturalAgentPJId Int
  noticeId Int
  CulturalAgentPF CulturalAgentPF
  CulturalAgentPJ CulturalAgentPJ
  Notice Notice
  createdAt DateTime [default: `now()`, not null]
}

Table Classification {
  id Int [pk, increment]
  userId Int [not null]
  noticeNumber String [not null]
  projectNumber String [not null]
  category String [not null]
  proponentName String [not null]
  cpf String [not null]
  situation String [not null]
  User User [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  ClassificationFiles ClassificationFiles [not null]
}

Table ClassificationFiles {
  id Int [pk, increment]
  name String [not null]
  key String [not null]
  contentType String [not null]
  classificationId Int [not null]
  Classification Classification [not null]
}

Ref: Session.userId - User.id

Ref: UserConfirmationCode.userId - User.id

Ref: CulturalAgentPF.fileId - FilePF.id

Ref: CulturalAgentPF.userId - User.id

Ref: CulturalAgentPJ.userId - User.id

Ref: CulturalAgentPJ.fileId - FilePJ.id

Ref: Contact.userId > User.id

Ref: CulturalCollective.userId > User.id

Ref: Notice.culturalAgentPFId > CulturalAgentPF.id

Ref: Notice.culturalAgentPJId > CulturalAgentPJ.id

Ref: Notice.noticePreviewId > NoticePreview.id

Ref: Notice.responsibleId > Responsible.id

Ref: Notice.projectCoordinatorId > ProjectCoordinator.id

Ref: NoticeFiles.culturalAgentPFId > CulturalAgentPF.id

Ref: NoticeFiles.culturalAgentPJId > CulturalAgentPJ.id

Ref: NoticeFiles.noticeId > Notice.id

Ref: Classification.userId > User.id

Ref: ClassificationFiles.classificationId > Classification.id